--- a/css/chart/chart.css
+++ b/css/chart/chart.css
@@ -1,10 +1,9 @@
-.redBall,.blueBall,.greenBall,.orangeBall,.redBall2,.grayBall,.betBall,.betbox em,
 .qihaoIcon,.chartListYil .lineBox{ background-image:url("/image/newtubiaobg.png"); background-repeat:no-repeat;}
 .clearfix:after{content:".";display:block;height:0;clear:both;overflow:hidden; visibility:hidden;}
 .clearfix{*zoom:1;}/* Hides from IE-mac \*/
 
 /*chart menu*/
-.chartMenu{width:1000px; padding:8px 0px; margin: 10px auto 15px; background-color: #eaecee;}
+.chartMenu{width:1000px; padding:8px 0px; margin: 10px auto 10px; background-color: #eaecee;}
 .newNavDiv{font-size: 14px; clear:both; height:22px; line-height:22px; padding:3px 0 3px 0;}
 .chartMenu a{padding: 0 5px; margin:0 5px; height:22px; line-height:22px; color:#555555; display:inline-block; float:left;}
 .chartMenu a:hover{color:#f32b1b;}
@@ -14,15 +13,16 @@
 .chartOper .font_14{ float:left;margin:0 30px 0 0;}
 /*chart*/
 .chtCont{width:1000px;margin:0 auto; overflow:hidden;font-family:Arial,Helvetica,sans-serif; line-height:18px;}
-.chartH{height:28px;background-color:#EEEFEE; text-align:left;}
-.bg1{float:left;display:inline-block;width:18px;height:18px;line-height:18px;background-color:#F6F6F6;border-top:1px solid #fff;border-left:1px solid #fff;color:#F6F6F6;}
-.chtMainColor .bg1,.chtMainColor .bg1Txt,.bg1Txt{color:#D6BFC0;}
+.chartH{height:35px; padding-top: 15px; background-color:#EEEFEE; text-align:left;}
+.mark_lable{float: left; margin: 0 10px;}
+.bg1{position: relative;z-index: 2;display: inline-block;float: left;width: 18px;height: 18px;line-height: 18px;border-top: 1px solid #fff;border-left: 1px solid #fff; color: #F6F6F6; background-color: #F6F6F6;}
+.chtMainColor .bg1,.chtMainColor .bg1Txt,.bg1Txt{color:#ADADAD;}
 .bgye{background-color:#FCE2CB;color:#CD3D3C;}
 .bggr{background-color:#F3F9E4;color:#647911;}
 .mbg1,.chtMainColor .mbg1{background-color:#D9E1EA;color:#333;}
 .mbg2,.chtMainColor .mbg2{background-color:#D9E1EA;color:#00F;}
 .mbg3,.chtMainColor .mbg3{background-color:#D9E1EA;color:#ff0000;}
-.chartTit .qihao,.chartTit .bg1{background-color:#D6EEFF;border-bottom:1px solid #CBDDED;color:#333;}
+.chartTit .qihao,.chartTit .bg1{background-color:#EEEFEE;border-bottom:1px solid #CBDDED;color:#333;}
 .box1,.box2,.qihao{float:left;}
 .qihao{height:18px;background-color:#EEEFEE;border-top:1px solid #fff;}
 .qihaoIcon{display:inline-block;width:10px;height:18px; cursor: pointer;background-position:-52px -162px;}
@@ -33,12 +33,11 @@
 .chartBottomFloat{position: fixed;bottom: 0; z-index: 150; background-color: #fff; _position:absolute; _top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight)); _zoom:1;}
 /*chart operation*/
 .operation .qutxt,.operation .diwei,.operation .quNav,.operation .quNavMore,.operation .link_blue,.operation .checkTxt{ float:left;}
-.chartH .operation,.chartOper .operation{height:18px; line-height:18px;*line-height:21px;padding:5px 10px;position:relative; z-index:5;}
-.chartH .operation{border-left:1px solid #fff;border-right:1px solid #fff; z-index:1;}
+.chartH .operation,.chartOper .operation{position:relative; z-index:5; margin-left: 30px; float: left;}
 .chartH .qihao{height:20px;padding:4px 0;border-top:0 none;text-align:center;}
 .chartTit .qihaoSpan{ position:relative;top:-4px;left:-2px; z-index:1;}
 .chartHBottom .operation,.chartHBottom .qihao{padding:0;}
-.operation .qutxt{width:30px;}
+.operation .qutxt{width:40px;}
 .diwei{ display:inline-block;margin:0 10px 0 0;width:28px;height:16px; line-height:16px;border:1px solid #C4CFD6;border-radius:2px;-webkit-border-radiue:2px;-moz-border-radius:2px;text-align:center;background:#F4F4F4; 
 background: -moz-linear-gradient(top, #FFFFFF, #EDEDED 80%);background: -webkit-gradient(linear, 0 0, 0 80%, from(#FFFFFF), to(#EDEDED));
 filter:progid:DXImageTransform.microsoft.gradient(gradienttype=0,startColorStr=#FFFFFF,endColorStr=#EDEDED);}
@@ -48,12 +47,12 @@ background: -moz-linear-gradient(top, #FFFFFF, #EDEDED 80%);background: -webkit-
 .operation .quNavMore{padding:0 15px 0 0;*padding:0 10px 0 0;*line-height:20px;}
 *+html.operation .quNavMore{padding:0 10px 0 0;line-height:20px;}
 .operation .link_blue{padding:0 5px;}
-.operation .link_blue.selected{ font-weight:bold;color:#FF6D00;}
+.operation .link_blue.selected{ color:#fff; background-color: #323232;}
 .operation .link_blue:hover{ text-decoration:none;}
-.checkTxt{/*width:45px;*/margin:0 8px 0 0;*margin:0 4px 0 0;height:18px; line-height:18px;*line-height:20px;overflow:hidden;}
+.checkTxt{margin:0 10px 0 0;height:18px; line-height:18px;*line-height:20px;overflow:hidden; float:left;}
 *+html.checkTxt{margin:0 4px 0 0;}
 .checkTxt input,.checkTxt span{ float:left;}
-.checkTxt input{margin:3px 2px 0 0;*margin:-2px 0 0 0;}
+.checkTxt input{margin:3px 2px 0 0;}
 
 .diweiDiv{width:135px; padding:5px; line-height:20px; background:#E8F9FF; position:absolute;top:24px;left:40px; z-index:9; display:none; -moz-box-shadow:1px 1px 3px #999999; -webkit-box-shadow:1px 1px 3px #999999; box-shadow:1px 1px 3px #999999; filter:progid:DXImageTransform.Microsoft.Shadow(color='#999999',direction=135,strength=3); border:1px solid #C4CFD6;}
 .diweiDiv .checkTxt{width:58px;}
@@ -65,21 +64,25 @@ background: -moz-linear-gradient(top, #FFFFFF, #EDEDED 80%);background: -webkit-
 .bdbtm2{padding-bottom:1px;border-bottom:2px solid #CAC8C8;}
 .bg1.fqborder{border-left-color:#CAC8C8;}
 /*ball*/
-.betBall{background-position:1px -240px;float:left;display:inline-block;width:18px;height:18px;line-height:18px;background-color:#F6F6F6;border-top:1px solid #fff; cursor:pointer;border-left:1px solid #fff;}
+.betBall{float:left;display:inline-block;width:18px;height:18px;line-height:18px;border-top:1px solid #fff; cursor:pointer;border-left:1px solid #fff;position: relative;z-index: 2; color: #ADADAD;}
 /*.box1 .betBall{border-right:1px solid #fff;}
 .box2 .betBall{border-left:1px solid #fff;}*/
 .redBall,.blueBall,.greenBall,.orangeBall,.redBall2,.grayBall,
-.chtMainColor .redBall,.chtMainColor .blueBall,.chtMainColor .greenBall,.chtMainColor .orangeBall,.chtMainColor .redBall2,.chtMainColor .grayBall{color:#fff; font-weight:bold; line-height:18px;}
-.redBall{background-position:1px -188px;}
-.blueBall{background-position:1px -163px;}
-.grayBall{background-position:1px -188px;}
-.orangeBall{background-position:-25px -214px;}
-.redBall2{background-position:-25px -188px;}
-.greenBall{background-position:-25px -163px;}
+.chtMainColor .redBall,.chtMainColor .blueBall,.chtMainColor .greenBall,.chtMainColor .orangeBall,
+.chtMainColor .redBall2,.chtMainColor .grayBall{color: #fff;}
+.betBall:after,.redBall:after,.blueBall:after,.greenBall:after,.orangeBall:after,.redBall2:after,.grayBall:after{content: ''; width: 16px;height: 16px;border-radius: 100%;-webkit-border-radius: 100%;-moz-border-radius: 100%;color: #fff;position: absolute;top: 1px;left: 1px;z-index: -1;}
+.betBall:after{width: 15px; height: 15px;background-color: #fff; border: 1px solid #ADADAD;}
+.redBall:after{background-color: #f75024;}
+.blueBall:after{background-color: #246ef7;}
+.grayBall:after{background-color: #70400e;}
+.orangeBall:after{background-color: #FC8E2B;}
+.greenBall:after{background-color: #10801B;}
+.redBall2:after{background-color: #E000C3;}
 .chonghcolor{color:#10801B;}
 .lianhcolor{color:#E000C3;}
 .bianjcolor{color:#FC8E2B;}
 .zhixiecolor{color:#70400E;}
+.betbox .redBall:after, .betbox .blueBall:after{width: 16px;height: 16px;border: none;}
 /*tongji yilou*/
 .tongji .bg1{color:#666;}
 .chartListYil .qihao,.chartListYil .bg1{height:59px;position:relative;}
@@ -95,7 +98,7 @@ background: -moz-linear-gradient(top, #FFFFFF, #EDEDED 80%);background: -webkit-
 .okselecter{width:1000px;flloat:left; }/**/
 .okselecter .betbox{/*width:1000px;margin:0 auto;*/overflow:hidden;}
 .ie6oker{ _position:absolute; _top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight)); _zoom:1;}
-.okselecter .betbox .qihao{ background-color:#D6EEFF;}
+.okselecter .betbox .qihao{ background-color:#EEEFEE;}
 .okselecter .betbox form{display:inline;}
 .gaopin_chart_buy{margin-top:1px;border-bottom:1px solid #BFBAA7;border-top:1px solid #BFBAA7; background-color:#EEEFEE;height:42px;padding:10px 0;}
 .betBtn,.bet_money_display{ float:left;}
@@ -103,6 +106,7 @@ background: -moz-linear-gradient(top, #FFFFFF, #EDEDED 80%);background: -webkit-
 .buy_note_num{width:35px; text-align:center;}
 .bigtzbtn,.ybtn79{ display:inline-block; float:left;margin:0 10px 0 0; overflow:hidden; }
 .ybtn79{margin:10px 10px 0 0;}
+.bigtzbtn{width: 120px; height: 44px; line-height: 44px; font-size: 20px; background-color: #ea5642; color: #fff; border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px;}
 /***投注倾向***/
 .tendency span{ width:19px; height:130px; line-height:20px; margin:1px 1px 0px 0px; float:left; position:relative; background-color:#F5F5F5;}
 .tendency span em{ width:9px; display:inline-block; position:absolute; left:5px; bottom:0; background:url(/StyleDefault/Images/Chart/tendency_red.gif) repeat-y;}
