--- a/css/chart/chart.css
+++ b/css/chart/chart.css
@@ -1,4 +1,4 @@
-.qihaoIcon,.chartListYil .lineBox{ background-image:url("/image/newtubiaobg.png"); background-repeat:no-repeat;}
+.qihaoIcon,.chartListYil .lineBox{ background-image:url("/image/bg.png"); background-repeat:no-repeat;}
 .clearfix:after{content:".";display:block;height:0;clear:both;overflow:hidden; visibility:hidden;}
 .clearfix{*zoom:1;}/* Hides from IE-mac \*/
 
@@ -25,8 +25,8 @@
 .chartTit .qihao,.chartTit .bg1{background-color:#EEEFEE;border-bottom:1px solid #CBDDED;color:#333;}
 .box1,.box2,.qihao{float:left;}
 .qihao{height:18px;background-color:#EEEFEE;border-top:1px solid #fff;}
-.qihaoIcon{display:inline-block;width:10px;height:18px; cursor: pointer;background-position:-52px -162px;}
-.qihaoIcon.selected{background-position:-65px -162px;}
+.qihaoIcon{display:inline-block;width:10px;height:18px; cursor: pointer;background-position:0px 1px;}
+.qihaoIcon.selected{background-position:-13px 1px;}
 
 .chtTop,.chartBottom{width:1000px;margin:0 auto;}
 .chtTopFloat{position: fixed; top: 0; z-index: 150; background-color: #fff; _position:absolute; _top:expression(eval(document.documentElement.scrollTop)); _zoom:1;}
@@ -124,10 +124,6 @@ p.newlist1{width:150px;}
 p.newlist2{width:760px;}
 p.newlist1 a{width:130px;}
 p.newlist2 a{width:170px;margin:0 8px 0 0;}
-/*锚*/
-.fanyeList{width: 18px; height: 112px; position: fixed; bottom: 115px; float: right; right: 156px; text-align: center; z-index: 1; background: url("/image/newmatchbg.png") -365px -33px no-repeat; _position:absolute; _top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-100)); _right: 150px;  _zoom:1;}
-.fanyeList a{display: inline-block; height: 56px; width: 18px;}
-.fanyeList{display:none}
 /*lskj*/
 .customqiBox{padding:0 30px 0 0;}
 .customqiBox .diwei{width:48px;}
